# zeronet-torrent-plugin

./: .gitignore  .gitmodules  .travis.yml  AlertEncoder.py  FAQ.md  Makefile  NOTES.md  README.md  TorrentPlugin.py  Vagrantfile  __init__.py  appveyor.yml  clean.sh  conanfile.py  conanfile.txt  plugin_info.json  provision.sh  test.py
libtorrent/: __init__.py
src/: CMakeLists.txt
test/: test.py
